--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,26 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "next.config.js", "helper/form_validation.ts", "pages/addproduct.tsx", "pages/_app.tsx", "layout/SideBar.jsx", "pages/api/auth/[...nextauth].ts"  ],
+    "**/*.tsx",
+    "next.config.js",
+    "helper/form_validation.ts",
+    "pages/addproduct.tsx",
+    "pages/_app.tsx",
+    "layout/SideBar.jsx",
+    "pages/api/auth/[...nextauth].ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
