--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
+    "sweetalert2": "^11.7.3",
     "yup": "^1.0.2"
   }
 }
